create adj matrix with top 1000 users

--- a/github-analysis.ipynb
+++ b/github-analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -810,7 +810,7 @@
        "[100 rows x 5 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -822,7 +822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -1600,7 +1600,7 @@
        "[100 rows x 5 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1613,7 +1613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 30,
    "metadata": {
     "collapsed": false
    },
@@ -2320,20 +2320,20 @@
        "[229374 rows x 5 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Group by repo_name so the results are rows with unique repo_names with counts for contributions\n",
-    "unique_repo_df = df_valid_emails.groupby(['committer_email', 'committer_name', 'repo_name'], as_index=False).aggregate(np.sum).sort_values('total_num_commits', ascending=False)\n",
-    "unique_repo_df.reset_index()"
+    "# Group by repo_name so the results are rows with repo_names with counts for contributions\n",
+    "unique_emailandrepo_df = df_valid_emails.groupby(['committer_email', 'committer_name', 'repo_name'], as_index=False).aggregate(np.sum).sort_values('total_num_commits', ascending=False)\n",
+    "unique_emailandrepo_df.reset_index()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 31,
    "metadata": {
     "collapsed": false
    },
@@ -2342,28 +2342,48 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['1a73af9e7ae00182733b2292511b814be66f065f@pyjobs.fr'\n",
-      " '7555aa909aeefc4b48a22650b82530052cae90a6@gmail.com'\n",
-      " 'f65d3f2dc139dcfe7b6f0b0a466af3bc5fed8fa7@gmail.com' ...,\n",
-      " '28d64d6302e984dbd4a9b3aad553cda84324983c@gmail.com'\n",
-      " '28d673afb50022e86baf3d1803c8465604da1de4@users.noreply.github.com'\n",
-      " '000073c99a1f00780a5d3cbf9ce8c5ec10da64cd@gmail.com']\n"
+      "Num unique repos: 724\n",
+      "Num unique users: 200\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(200, 724)"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Create adjacency matrix with users as rows and repos as columns\n",
+    "# Create adjacency matrix df with users as rows and repos as columns (with empty values = 0)\n",
+    "\n",
+    "first_thousand_df = unique_emailandrepo_df.head(1000)\n",
     "\n",
     "#unique repos:\n",
-    "unique_repo_names = unique_repo_df.repo_name.unique()\n",
+    "unique_repo_names = first_thousand_df.repo_name.unique()\n",
     "#unique user:\n",
-    "unique_users = unique_repo_df.committer_email.unique()\n",
+    "unique_users = first_thousand_df.committer_email.unique()\n",
+    "\n",
+    "print('Num unique repos: {}'.format(len(unique_repo_names)))\n",
+    "print('Num unique users: {}'.format(len(unique_users)))\n",
     "\n",
     "#create adj matrix df\n",
-    "adj_matrix_df = pd.DataFrame(columns=unique_repo_names, index=unique_users)\n",
-    "\n",
-    "#for index, row in unique_repo_df.iterrows():\n",
-    "    "
+    "adj_matrix_df = pd.DataFrame(columns=unique_repo_names, index=unique_users).fillna(0)\n",
+    "adj_matrix_df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "#for index, row in unique_repo_df.iterrows():"
    ]
   },
   {
@@ -2377,7 +2397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -2388,7 +2408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -2432,7 +2452,7 @@
        " [32, 8, 9, 13, 14, 15, 18, 19, 20, 22, 23, 26, 27, 28, 29, 30, 31]]"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
